<resources>
    <string name="app_name">ACADEMIO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="welcome">WELCOME</string>
    <string name="todo">TODO</string>
    <string name="academio">ACADEMIO</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new journey</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="icon">icon image</string>
    <string name="enter_month">Enter month: </string>
    <string name="courses">courses</string>
    <string name="login">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="class_name">Class Name</string>
    <string name="create_class">Create Class</string>
    <string name="join_class">Join Class</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="pick_date">pick date</string>
    <string name="roll_number">Roll No.</string>
    <string name="student_name">Student Name</string>
    <string name="presence">Presence</string>
    <string name="add_item">Add Item</string>
    <string name="add_material">Add Material</string>
    <string name="material_title">Material Title</string>
    <string name="select_type">Select type: </string>
    <string name="material_topic">Material Topic</string>
    <string name="material_link">Material Link</string>
    <string name="material_text">Material Text</string>
    <string name="refresh">refresh</string>
    <string name="material_choose_device">Select Material</string>
    <string name="enter_year">Enter year:</string>
    <string name="exo_fullscreen_enter">Enter fullscreen</string>
    <string name="exo_fullscreen_exit">Exit fullscreen</string>
    <string-array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string-array name="types">
        <item>Notes</item>
        <item>Videos</item>
        <item>Links</item>
        <item>Alerts</item>
    </string-array>
</resources>