<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_date_pick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/pick_date"
            app:layout_constraintEnd_toStartOf="@id/btn_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_date_pick"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_date_pick"
            tools:text="selected date" />

        <ScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_selected_date">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/roll"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/roll_number"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="10dp"
                        android:text="@string/student_name"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:checked="true"
                        android:paddingVertical="20dp"
                        android:text="@string/presence" />

                </TableRow>
            </TableLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>