<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AuthTheme">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/material_add_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <TextView
                    android:id="@+id/txt_material_dialog_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/bungee"
                    android:text="@string/add_material"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inp_material_title"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/material_title"
                    android:textSize="16sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/antic"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="5dp">

                <TextView
                    android:id="@+id/txt_material_dialog_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".3"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/select_type"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/inp_material_type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inp_material_topic"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/material_topic"
                    android:textSize="16sp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/inp_material_topic_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:completionThreshold="1"
                        android:dropDownAnchor="?attr/pivotAnchor"
                        android:fontFamily="@font/antic"
                        android:inputType="text"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="18dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:id="@+id/inp_material_link_row"
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inp_material_link"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/material_link">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/antic"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:id="@+id/inp_material_note_row"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="5dp">

                <TextView
                    android:id="@+id/inp_material_note_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="@string/material_choose_device"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/inp_material_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:backgroundTint="@color/white"
                    android:elevation="5dp"
                    android:paddingVertical="10dp"
                    android:text="@string/material_choose_device"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <VideoView
                    android:id="@+id/material_display"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/black"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inp_material_text"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/material_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/antic"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp">

                <Button
                    android:id="@+id/material_dialog_cancel"
                    style="@style/FlushedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight=".5"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/material_dialog_submit"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight=".5"
                    android:backgroundTint="@color/black"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</layout>
