<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/material_item_rvl"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    android:background="@drawable/material_item_rvi_bg"
    android:elevation="5dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/material_item_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:contentDescription="@string/icon"
        android:padding="5dp"
        android:src="@drawable/note_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/material_item_icon"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/material_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/material_item_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/material_item_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/academio"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/material_item_icon"
        app:layout_constraintTop_toBottomOf="@+id/material_item_title" />


</androidx.constraintlayout.widget.ConstraintLayout>